--- a/package.json
+++ b/package.json
@@ -1,17 +1,24 @@
 {
-  "name": "mqtt-project",
-  "version": "0.0.0",
-  "private": true,
+  "name": "mqtt_project2",
+  "version": "1.0.0",
+  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "API para registrar pedidos",
   "dependencies": {
-    "body-parser": "^1.20.3",
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "dotenv": "^16.4.7",
-    "express": "~4.16.1",
-    "morgan": "~1.9.1",
-    "mysql2": "^3.14.0"
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mysql2": "^3.6.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
